--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,11 @@
   "dependencies": {
     "polymer": "Polymer/polymer#~0.5.4",
     "core-elements": "Polymer/core-elements#~0.5.4",
-    "paper-elements": "Polymer/paper-elements#~0.5.4"
+    "paper-elements": "Polymer/paper-elements#~0.5.4",
+    "backbone": "~1.1.2",
+    "underscore": "~1.7.0",
+    "jquery": "~2.1.3",
+    "tsj4-bb-template-loader": "https://github.com/tjohnson4/tsj4-bb-template-loader.git#0.0.2",
+    "competent-meyerweb-reset": "~2.0.20110126"
   }
 }
