--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "debug": "~2.1.1",
     "ejs": "~2.1.4",
     "express": "~4.11.1",
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^0.11.0",
+    "grunt-contrib-less": "^1.0.0",
+    "grunt-contrib-uglify": "^0.7.0",
     "less-middleware": "1.0.x",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
