--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-cssmin": "^0.11.0",
     "grunt-contrib-less": "^1.0.0",
     "grunt-contrib-uglify": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
     "less-middleware": "1.0.x",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0"
